--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="button_2">Button 2</string>
     <string name="choose_image">Choose Image</string>
     <string name="call_mainactivity">Call MainActivity</string>
+    <string name="button_1">Button 1</string>
 </resources>
